removed preview feature dep